--- a/NutritionFacts.html
+++ b/NutritionFacts.html
@@ -43,8 +43,14 @@ hr[class="thick"] {
 	width: 100%;
 }
 
-.vitamins .first, .vitamins .second {
-	flex-basis: 40%;
+.vitamins p {
+	flex-basis: 20%;
+	text-align: right;
+}
+
+.vitamins .first {
+	flex-basis: 50%;
+	text-align: left;
 }
 
 	</style>
