exercise almost done

--- a/NutritionFacts.html
+++ b/NutritionFacts.html
@@ -198,6 +198,11 @@ div .indent_small {
 <br>
 
 	<div class="other small">
+		<p class="first_small left"></p>
+		<p class="first_small left">Calories:</p>
+		<p>2,000</p>
+		<p>2,500</p>
+		<hr>
 		<hr>
 		<p class="first_small left">Trans Fat</p>
 		<p class="first_small left">Less than</p>
